fixed mobile styling on small phones

--- a/alex-portfolio/src/components/hero.scss
+++ b/alex-portfolio/src/components/hero.scss
@@ -15,10 +15,24 @@
     width: 5%;
 }
 
+.intro-buttons {
+  display:flex;
+  margin: 2% auto;
+  justify-content: center;
+  width: 100%;
+
+  @media only screen and (max-width: 600px) {
+    flex-direction: column;
+    align-items: center;
+    margin: 10% auto;
+    width: 100%;
+  }
+}
+
 .intro-button {
-    margin: 1%;
+    margin: 1.2%;
     padding: .7%;
-    width: 7%;
+    width: 10%;
     background-color: white;
     color: #345f8a;
     border: 4px solid #345f8a;
@@ -26,7 +40,7 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 1.2rem;
     transition: ease-in-out .1s;
 
     &:hover {
@@ -39,8 +53,9 @@
   }
 
   @media only screen and (max-width: 600px) {
-    font-size: 1rem;
-    width: 30%;
+    font-size: .8rem;
+    margin: 6% 0;
+    width: 20%;
   }
 }
 
@@ -67,13 +82,20 @@
     }
 
     @media only screen and (max-width: 600px) {
-      font-size: 5rem;
+      font-size: 3.2rem;
       width: 90%;
+      height: 88%;
     }
 }
 
 .subtitle {
     font-size: 3.5rem;
+
+    @media only screen and (max-width: 600px) {
+      font-size: 2.4rem;
+      width: 90%;
+      margin: 2% auto;
+    }
 }
 
 #more-arrows {
